--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
     <title>Página do Mayck</title>
 </head>
 <body>
-    <h1 id="paragrafo">Página do Mayck</h1>
+    <h1>Página do Mayck</h1>
     
-    <h2>Manchete 1</h2>
-    <p>Essa é minha nova página.</p>
-    <p>Nela vocês vão encontrar muitas novidades!</p>
+    <h2 class="fonte-azul">
+       <a href="materia1.html">Sai a nova tabela do IPVA 2022</a>
+    </h2>
+    <p>
+        Já saiu a nova tabela do IPVA 2022.<br />
+        Clique na matéria para ver mais detalhes.
+    </p>
 
-    <h2 class="fonte-azul">Manchete 2</h2>
-    <p id="paragrafo">Essa é minha nova página.</p>
-    <p class="fonte-azul">Nela vocês vão encontrar muitas novidades!</p>
+    <h2 class="fonte-azul">
+        <a href="receita-juju.html">Nova receita de bolo da Vovó Juju!</a></h2>
+    <p>Vovó Juju mostra sua nova delícia</p>
+
 </body>
 
 </html>
