Adição de muitas coisas

--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt_br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="assets/css/main-style.css">
     <title>Página do Mayck</title>
 </head>
 <body>
-    <h1>Página do Mayck</h1>
-    
-    <h2 class="fonte-azul">
-       <a href="materia1.html">Sai a nova tabela do IPVA 2022</a>
-    </h2>
-    <p>
-        Já saiu a nova tabela do IPVA 2022.<br />
-        Clique na matéria para ver mais detalhes.
-    </p>
+    <nav>
+        <h1>Página do Mayck</h1>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Notícias da Semana</a></li>
+            <li><a href="paginas/contato.html">Contato</a></li>
+            <li><a href="#">Sobre nós</a></li>
+        </ul>
+    </nav>
 
-    <h2 class="fonte-azul">
-        <a href="receita-juju.html">Nova receita de bolo da Vovó Juju!</a></h2>
-    <p>Vovó Juju mostra sua nova delícia</p>
-
+    <section class="container">
+        <article>
+            <h2 class="fonte-azul">
+                <a href="paginas/materia1.html">Sai a nova tabela do IPVA 2022</a>
+            </h2>
+            <p>
+                Já saiu a nova tabela do IPVA 2022.<br />
+                Clique na matéria para ver mais detalhes.
+            </p>
+            <p> Final do texto </p>
+        </article>
+        <article>
+            <h2 class="fonte-azul">
+                <a href="paginas/receita-juju.html">Nova receita de bolo da Vovó Juju!</a>
+            </h2>
+            <p>Vovó Juju mostra sua nova delícia</p>
+        </article>
+    </section>
 </body>
 
 </html>
